# sportovy-pretek

./: .flake8  .gitignore  .pre-commit-config.yaml  Makefile  README.md  config.example.toml  issues.txt  pyproject.toml  requirements.txt
.github/workflows/: python-app.yml
docs/: KatalogPoziadaviek.md  Navrh.md  TIS-requirements.md  TestovacieScenare.md
src/orienter/: __main__.py
src/orienter/commander/: cli.py  entry.py  menu.py  utils.py
src/orienter/communicator/: api.py  objects.py
src/orienter/configuration/: configuration.py  constants.py
src/orienter/configurator/: __init__.py  config.py  constants.py
src/orienter/databasor/: models.py  pehapezor.py  schemas.py  session.py
src/orienter/statista/: statistics.py
src/orienter/statista/templates/: 1racer.html  multipleRacers.html  multiple_racers.html  one_racer.html
src/orienter/statista/templates/css/: style.css
src/orienter/tester/: api_test.py  configurator_test.py  misc_test.py  pehapezor_test.py  statistics_test.py
