[build-system]
requires = ["hatchling", "hatch-requirements-txt"]
build-backend = "hatchling.build"

[project]
name = "orienter"
version = "0.1.1"
authors = [
  { name="David Krchňavý", email="david.krchnavy@dakrc.mailer.me" },
  { name="Ondrej Bublavý", email="bublavy3@uniba.sk" },
  { name="Ákos Czére", email="czere7@uniba.sk"},
  { name="Filip Barančík", email="barancik5@uniba.sk" }
]
description = "A project for my university subject Information Systems Development"
readme = "README.md"
requires-python = ">=3.8"
dynamic = ["dependencies"]
classifiers = [
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.8",
    "Programming Language :: Python :: 3.9",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "License :: OSI Approved :: The Unlicense (Unlicense)",
    "Operating System :: OS Independent",
]

[project.urls]
"Homepage" = "https://github.com/TIS2023-FMFI/sportovy-pretek"
"Bug Tracker" = "https://github.com/TIS2023-FMFI/sportovy-pretek/issues"

[tool.hatch.metadata.hooks.requirements_txt]
files = ["requirements.txt"]

[tool.hatch.build]
exclude = [
    ".idea/",
    "docs/",
    ".github/"
]
